2002-03-26  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-e21.el (w3m-setup-favicon): Do nothing when w3m-current-url
	is nil.

	* w3m.el (w3m-goto-url): Force reload if w3m-current-redirect is set.
	(w3m): If w3m-current-url is nil, erase buffer.

	* w3m-util.el (w3m-time-less-p): Abolish.
	(w3m-assoc-ignore-case): Moved from w3m-cookie.el and rewrote not to
	use assoc* (because it's cl function).

	* w3m-cookie.el (w3m-cookie-retrieve): Use w3m-time-newer-p instead of
	w3m-time-less-p.
	(w3m-cookie-1-set): Ditto.
	(w3m-assoc-ignore-case): Moved to w3m-util.el.

2002-03-25  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-cookie.el (w3m-cookie-1-set): Use w3m-time-less-p instead of
	w3m-time-lapse-seconds.
	(w3m-cookie-retrieve): Ditto.

	* w3m-util.el (w3m-time-less-p): New inline function.

	* w3m.el (w3m-current-redirect): New buffer local variable.
	(w3m-clear-local-variables): Add w3m-current-redirect.
	(w3m-copy-local-variables): Treat w3m-current-redirect.
	(w3m-w3m-attributes): Set w3m-current-redirect instead of
	w3m-current-refresh when 30x response.
	(w3m-prepare-content): Use w3m-current-redirect instead of
	w3m-current-refresh.
	(w3m-goto-url): Do nothing but w3m-goto-url after retrieval if
	w3m-current-redirect is set.

2002-03-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-cookie.el (w3m-cookie-file): Changed default value.
	(w3m-cookie-save): Follow the above change.
	(w3m-cookie-load): Ditto.

2002-03-25  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-w3m-attributes): Don't call w3m-cookie-set.
	(w3m-w3m-dump-head-source): Call w3m-cookie-set.
	(w3m-cookie-command-arguments): Set `-no-cookie';
	Don't set cookie_accept_domains, cookie_reject_domains.

	* w3m-cookie.el (toplevel): Require 'w3m.
	(w3m-cookie-accept-domains): Moved from w3m.el.
	(w3m-cookie-reject-domains): Ditto.
	(w3m-cookie-accept-bad-cookies): New user option.
	(w3m-cookie-file): Ditto.
	(w3m-cookie-set-ignore): Fix.