@@ -1,5 +1,11 @@
 2002-03-26  Yuuichi Teranishi  <teranisi@gohome.org>
 
+	* w3m.el (toplevel): Added autoload setting for w3m-about-cookie.
+
+	* w3m-cookie.el (w3m-cookie-store): Don't replace if ignored cookie.
+	(w3m-cookie-retrieve): Don't use cookie which is ignored.
+	(w3m-about-cookie): New function.
+
 	* w3m-e21.el (w3m-setup-favicon): Do nothing when w3m-current-url
 	is nil.
 
